Fixed online user list, and added scrollbar for it.

--- a/ClientSide/css/main.css
+++ b/ClientSide/css/main.css
@@ -48,3 +48,7 @@ footer{
 #chatScrollContainer{
     height:55%;
 }
+
+#splashScrollContainer{
+    height:80%;
+}
